@@ -1,3 +1,9 @@
+2008-04-23  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-signal.c (_syx_save_recovered_image): 
+
+	* src/main.c (_do_recovery): 
+
 2008-04-22  Luca Bruno  <lethalman88@gmail.com>
 
 	* tests/testinterp.c (main): added another ensure test
